--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
   
   .calculator-grid {
     display: grid;
-    justify-content: flex-start;
-    align-content: flex-start;
+    justify-content: center;
+    align-content: center;
     max-width: fit-content;
     min-height: fit-content;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
     gap: 1em;
-    margin: 2em;
+    margin: 2em auto;
     border: 1em solid #171717;
     padding: 2em;
     border-radius: 50px;
